Desktop/adstatDev/adstat-nt-py-modifier/.kube/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  ports:
    - protocol: TCP
      port: 6379
      name: redis
