Desktop/adstatDev/adstat-nt-py-modifier/.kube/redis/gateway.yaml
# export GATEWAY_NAME='redis-test' && \
# export GATEWAY_PORT=16458 && \
# k patch service/istio-ingressgateway -n istio-system --type='json' \
# -p='[{"op":"add","path":"/spec/ports/-", "value": { "name": "'${GATEWAY_NAME}'", "port": '${GATEWAY_PORT}', "targetPort": '${GATEWAY_PORT}' }}]'

# k get service -n istio-system -l istio=ingressgateway --output=json | jq '.items[].spec.ports[]'

# nodePort => 30705

# kustomize build . | kubectl apply -f -

# k exec -n redis deployment-redis-cache-server-dev-654c67c585-wqb86 -it sh
# redis-cli -h 192.168.3.34 -p 32698
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 16458
        name: redis
        protocol: TCP
      hosts:
        - "*"
